Created portfolio website

--- a/index.html
+++ b/index.html
@@ -62,27 +62,25 @@
             <div class="tech-slide">
                 <img src="images/aspnet.svg" alt="ASP.NET Framework">
             </div>
+
+            <!-- Carousel Controls -->
+            <button class="carousel-control carousel-prev" id="prevSlide" type="button">
+                <i class="fas fa-chevron-left"></i>
+            </button>
+            <button class="carousel-control carousel-next" id="nextSlide" type="button">
+                <i class="fas fa-chevron-right"></i>
+            </button>
         </div>
 
-        <!-- Carousel Controls -->
-        <button class="carousel-control carousel-prev" id="prevSlide" type="button">
-            <i class="fas fa-chevron-left"></i>
-        </button>
-        <button class="carousel-control carousel-next" id="nextSlide" type="button">
-            <i class="fas fa-chevron-right"></i>
-        </button>
-
-        <div class="stars"></div>
-        <div class="container h-100 d-flex align-items-center justify-content-center">
-            <div class="text-center hero-content">
-                <h1 class="hero-title animate-title">Vishal Kumar</h1>
-                <div class="animated-text">
-                    <span class="text-element">.NET Developer</span>
-                    <span class="text-element">Full Stack Engineer</span>
-                    <span class="text-element">Problem Solver</span>
-                </div>
-                <p class="hero-subtitle mt-3"></p>
+        <!-- Hero Content -->
+        <div class="hero-content">
+            <h1 class="hero-title animate-title">Vishal Kumar</h1>
+            <div class="animated-text">
+                <span class="text-element">.NET Developer</span>
+                <span class="text-element">Full Stack Engineer</span>
+                <span class="text-element">Problem Solver</span>
             </div>
+            <p class="hero-subtitle mt-3"></p>
         </div>
     </section>
 
