--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
         <div class="container-fluid">
             <a class="navbar-brand" href="index.html">
-                <i class="fas fa-code"></i> Vishal Kumar
+                👨‍💻<i class="fas fa-code"></i> Vishal Kumar
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -40,7 +40,7 @@
         </div>
     </nav>
 
-    <!-- Hero Section (Home) -->
+    
     <section id="home" class="hero-section">
         <!-- Technology Carousel -->
         <div class="tech-carousel">
